--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-19 15:57:35 -0400 
+%% Created for Vijay at 2011-07-19 18:39:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,32 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@conference{osc2009,
+	Abstract = {The history and future of Open Sound Control (OSC) is
+discussed and the next iteration of the OSC specification is
+introduced with discussion of new features to support
+NIME community activities. The roadmap to a major
+revision of OSC is developed.},
+	Author = {Freed, Adrian and Schmeder, Andy},
+	Booktitle = {NIME},
+	Date-Added = {2011-07-19 18:39:39 -0400},
+	Date-Modified = {2011-07-19 18:39:39 -0400},
+	Month = {04/06/2009},
+	Title = {Features and Future of Open Sound Control version 1.1 for NIME},
+	Url = {http://cnmat.berkeley.edu/node/7002},
+	Year = {2009},
+	Bdsk-Url-1 = {http://cnmat.berkeley.edu/node/7002}}
+
+@misc{osc2011,
+	Author = {Matt Wright},
+	Date-Added = {2011-07-19 18:26:05 -0400},
+	Date-Modified = {2011-07-19 18:33:06 -0400},
+	Howpublished = {\url{http://opensoundcontrol.org/spec-1_0}},
+	Lastchecked = {July 2011},
+	Month = {March},
+	Title = {The Open Sound Control 1.0 Specification},
+	Year = {2002}}
 
 @inproceedings{carddata1987,
 	Address = {New York, NY, USA},
