--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -6,7 +6,11 @@
 \usepackage{setspace}		% 1.5 spacing
 \usepackage{longtable}          % Tables spanning pages
 \usepackage{verbatim}
+
+% Vijay packages
 \usepackage{url}
+\usepackage{graphicx}
+\usepackage[lofdepth,lotdepth]{subfig}
 
 % Custom packages
 \usepackage[first]{datestamp}	% Datestamp on first page of each chapter
